--- a/kubernetes/productcatalogue-service.yaml
+++ b/kubernetes/productcatalogue-service.yaml
@@ -31,7 +31,7 @@ spec:
     spec:
       containers:
       - name: productcatalogue
-        image: saikumartutika/productcatalogue:latest
+        image: saikumartutika/productcatalogue:latest1
         ports:
         - containerPort: 8020
         livenessProbe:
